fix responsive UI navigation bar for Demo and Comparison page

--- a/deploy/UI/comparison/index.html
+++ b/deploy/UI/comparison/index.html
@@ -6,16 +6,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/navbar-fixed/">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/list-groups/">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/features/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/navbar-fixed.css">
     <link rel="stylesheet" type="text/css" href="./css/features.css">
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<body style="background-color: white; font-family: Open Sans, sans-serif;">
+    <nav class="navbar navbar-expand-md border-bottom fixed-top bg-light fw-medium">
         <div class="container-fluid">
             <!-- <a class="navbar-brand " href="#">HAT-S Experiment</a> -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
@@ -314,11 +315,9 @@
             </symbol>
         </svg>
     </main>
-
+    <script src="./js/bootstrap.bundle.min.js"></script>
 
 </body>
-
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-<script src="./js/script.js"></script>
 
 </html>
