--- a/deploy/UI/demo/index.html
+++ b/deploy/UI/demo/index.html
@@ -7,7 +7,6 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/list-groups/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/list-groups.css">
     <link rel="stylesheet" type="text/css" href="./css/navbar-fixed.css">
     <link rel="stylesheet" type="text/css" href="./css/grid.css">
@@ -22,7 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/canvg@1.5.3/dist/browser/canvg.min.js"></script>
 </head>
 
-<body style="background-color: white;">
+<body style="background-color: white; font-family: Open Sans, sans-serif;">
     <nav class="navbar navbar-expand-md border-bottom fixed-top bg-light fw-medium">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -42,15 +41,16 @@
         </div>
     </nav>
     <div class="container-fluid my-1 themed-container text-medium" style="color:black;">
-        <div class="themed-container text-center fw-bolder display-6 mx-1" style="color: black;">ENHANCE SINGLE IMAGE SUPER
+        <div class="themed-container text-center fw-bolder display-6 mx-1" style="color: black;">ENHANCE SINGLE IMAGE
+            SUPER
             RESOLUTION</div>
         <div class="row mb-3 mx-1 text-center">
             <div class="col-6 themed-grid-col">
                 <div class="bd-example-snippet bd-code-snippet">
                     <div class="bd-example m-0 border-0">
                         <figure class="figure">
-                            <svg class="bd-placeholder-img figure-img img-fluid rounded" width="500" height="400"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 400x300"
+                            <svg class="bd-placeholder-img figure-img img-fluid rounded" width="300" height="200"
+                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 300x200"
                                 preserveAspectRatio="xMidYMid slice" focusable="false">
                                 <title>Placeholder</title>
                                 <rect width="100%" height="100%" fill="#868e96" id="placeholder-rect"></rect>
@@ -69,7 +69,7 @@
             </div>
             <div class="col-6 themed-grid-col">
                 <figure class="figure">
-                    <svg class="bd-placeholder-img figure-img img-fluid rounded" width="500" height="400"
+                    <svg class="bd-placeholder-img figure-img img-fluid rounded" width="400" height="300"
                         xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 400x300"
                         preserveAspectRatio="xMidYMid slice" focusable="false">
                         <title>Placeholder</title>
@@ -98,7 +98,7 @@
 
     <div class="b-example-divider" style="background-color: white;"></div>
     <div class="container themed-container text-center" style="color: black;">
-        <div class="display-6">Model selection</div>
+        <div class="display-6 fw-normal">Model selection</div>
         <div class="d-flex flex-row align-items-center justify-content-center">
             <div class="d-flex flex-column flex-md-row p-4 gap-4 py-md-5 align-items-center justify-content-center">
                 <div class="list-group max-width-600px list-group-checkable d-grid gap-2 border-0">
@@ -179,7 +179,7 @@
         </div>
     </div>
     <div class="b-example-divider" style="background-color: white;"></div>
-    <div class="themed-container text-center display-6" style="color: black;">Quick comparison</div>
+    <div class="themed-container text-center display-6 fw-normal" style="color: black;">Quick comparison</div>
     <div class="row row-cols-1 row-cols-md-4 gx-4 text-center">
         <div class="col themed-grid-col">
             HAT-S | Upscale X4
@@ -297,6 +297,8 @@
     <div class="b-example-divider" style="background-color: white;"></div>
     <div class="container-lg themed-container text-center">.container-lg</div>
 
+
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
