--- a/deploy/UI/demo/index.html
+++ b/deploy/UI/demo/index.html
@@ -24,6 +24,10 @@
 <body style="background-color: white; font-family: Open Sans, sans-serif;">
     <nav class="navbar navbar-expand-md border-bottom fixed-top bg-light fw-medium">
         <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
