Update processing time for home, adjust layout for example and update download for example image

--- a/deploy/UI/demo/index.html
+++ b/deploy/UI/demo/index.html
@@ -98,6 +98,7 @@
                 </div>
             </div>
             <div class="col-6 d-flex flex-col align-items-center justify-content-end themed-grid-col text-end">
+                <div id="processingTime" style="margin-right: 2%;"></div>
                 <button type="button" class="btn btn-success download" id="download" style="background-color: gray"
                     disabled>Download</button>
             </div>
