Remove  Unessential Parts

--- a/deploy/UI/example/example.html
+++ b/deploy/UI/example/example.html
@@ -5,35 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/list-groups/">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./css/list-groups.css">
     <link rel="stylesheet" type="text/css" href="./css/navbar-fixed.css">
     <link rel="stylesheet" type="text/css" href="./css/grid.css">
     <link rel="stylesheet" type="text/css" href="./css/footer.css">
-    <link rel="stylesheet" type="text/css" href="./css/slider-image.css">
-    <link rel="stylesheet" type="text/css" href="./css/vui.css">
+    <link rel="stylesheet" type="text/css" href="./css/slider.css">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/footers/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <script rel="stylesheet" href="./js/slider.js"></script>
     <script src="./js/script.js"></script>
-    <script type="text/javascript" src="node_modules/img-slider/distr/imgslider.min.js"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
-    <script src='https://s3-us-west-2.amazonaws.com/guruscriptz/image-comparison.js'></script>
-    <script src="https://cdn.jsdelivr.net/npm/canvg@1.5.3/dist/browser/canvg.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="./js/fetch.js"></script>
     <script src="./js/bootstrap.bundle.min.js"></script>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <script src='https://get.mavo.io/mavo.js'></script>
-
-    <!-- Thêm thư viện JSZip -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js"></script>
-    <!-- Thêm thư viện FileSaver.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
 </head>
 <script>
