--- a/deploy/UI/comparison/index.html
+++ b/deploy/UI/comparison/index.html
@@ -24,10 +24,10 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Demo</a>
+                        <a class="nav-link" href="../demo/index.html">Demo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Examples</a>
+                        <a class="nav-link" href="../example/index.html">Examples</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Comparison</a>
@@ -774,7 +774,7 @@
         <div class="b-example-divider" style="background-color: white;"></div>
 
         <div class="container px-4 py-5">
-            <h2 class="pb-2 border-bottom">HAT-S experiment on custom dataset</h2>
+            <h2 class="pb-2 fw-bold border-bottom">HAT-S experiment on custom dataset</h2>
             <div class="row g-4 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col d-flex align-items-start">
                     <div
