Create Additional demo, Details, About Us pages

--- a/deploy/UI/demo/index.html
+++ b/deploy/UI/demo/index.html
@@ -33,17 +33,27 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Demo</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active"  aria-current="page" href="#" data-bs-toggle="dropdown"
+                            aria-expanded="false">Demo</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item active"  aria-current="page" href="#">Main task</a></li>
+                            <li><a class="dropdown-item" href="../additional_demo/index.html">Additional task</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../example/index.html">Examples</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="../model_overview/index.html">Details</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="../comparison/index.html">Comparison</a>
                     </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="../about_us/index.html">About Us</a>
+                    </li>
                 </ul>
-
             </div>
         </div>
     </nav>
