update Comparison page

--- a/deploy/UI/comparison/index.html
+++ b/deploy/UI/comparison/index.html
@@ -457,18 +457,18 @@
                             <td>HAT-S original</td>
                             <td>DIV2K</td>
                             <td class="bg-color-psnr">32.5212</td>
-                            <td class="bg-color-ssim">0.9007</td>
-                            <td class="bg-color-psnr">28.9322</td>
-                            <td class="bg-color-ssim">0.7904</td>
-                            <td class="bg-color-psnr">27.8104</td>
-                            <td class="bg-color-ssim">0.7451</td>
-                            <td class="bg-color-psnr">31.5377</td>
-                            <td class="bg-color-ssim">0.9204</td>
+                            <td class="bg-success">0.9007</td>
+                            <td class="bg-success">28.9322</td>
+                            <td class="bg-success">0.7904</td>
+                            <td class="bg-success">27.8104</td>
+                            <td class="bg-success">0.7451</td>
+                            <td class="bg-success">31.5377</td>
+                            <td class="bg-success">0.9204</td>
                         </tr>
                         <tr>
                             <td>HAT-S applies Patch-Mosaic</td>
                             <td>DIV2K-Patch-Mosaic</td>
-                            <td class="bg-color-psnr">32.5495</td>
+                            <td class="bg-success">32.5495</td>
                             <td class="bg-color-ssim">0.9003</td>
                             <td class="bg-color-psnr">28.9117</td>
                             <td class="bg-color-ssim">0.7887</td>
@@ -532,12 +532,12 @@
                         <tr>
                             <td>HAT-S original</td>
                             <td>DIV2K</td>
-                            <td class="bg-color-psnr">27.0292</td>
-                            <td class="bg-color-ssim">0.7772</td>
+                            <td class="bg-success">27.0292</td>
+                            <td class="bg-success">0.7772</td>
                             <td class="bg-color-psnr">24.9616</td>
-                            <td class="bg-color-ssim">0.6417</td>
-                            <td class="bg-color-psnr">24.8562</td>
-                            <td class="bg-color-ssim">0.5999</td>
+                            <td class="bg-success">0.6417</td>
+                            <td class="bg-success">24.8562</td>
+                            <td class="bg-success">0.5999</td>
                             <td class="bg-color-psnr">24.3221</td>
                             <td class="bg-color-ssim">0.7659</td>
                         </tr>
@@ -545,8 +545,8 @@
                             <td>HAT-S applies Patch-Mosaic</td>
                             <td>DIV2K-Patch-Mosaic</td>
                             <td class="bg-color-psnr">27.0053</td>
-                            <td class="bg-color-ssim">0.7772</td>
-                            <td class="bg-color-psnr">24.9665</td>
+                            <td class="bg-success">0.7772</td>
+                            <td class="bg-success">24.9665</td>
                             <td class="bg-color-ssim">0.6406</td>
                             <td class="bg-color-psnr">24.8450</td>
                             <td class="bg-color-ssim">0.5993</td>
@@ -574,8 +574,8 @@
                             <td class="bg-color-ssim">0.6316</td>
                             <td class="bg-color-psnr">24.7843</td>
                             <td class="bg-color-ssim">0.5909</td>
-                            <td class="bg-color-psnr">24.3389</td>
-                            <td class="bg-color-ssim">0.7666</td>
+                            <td class="bg-success">24.3389</td>
+                            <td class="bg-success">0.7666</td>
                         </tr>
                     </tbody>
                 </table>
@@ -588,7 +588,7 @@
                     <caption class="text-body-secondary text-center fw-bold">HAT-S original</caption>
                     <thead>
                         <tr>
-                            <th>Low Resolution</th>
+                            <th>Low Resolution x4</th>
                             <th>Super Resolution x4</th>
                             <th>Super Resolution x8</th>
                             <th>Ground Truth</th>
@@ -637,7 +637,7 @@
                     <caption class="text-body-secondary text-center fw-bold">HAT-S applies Patch-Mosaic</caption>
                     <thead>
                         <tr>
-                            <th>Low Resolution</th>
+                            <th>Low Resolution x4</th>
                             <th>Super Resolution x4</th>
                             <th>Super Resolution x8</th>
                             <th>Ground Truth</th>
@@ -686,7 +686,7 @@
                     <caption class="text-body-secondary text-center fw-bold">HAT-S applies Perceptual Loss</caption>
                     <thead>
                         <tr>
-                            <th>Low Resolution</th>
+                            <th>Low Resolution x4</th>
                             <th>Super Resolution x4</th>
                             <th>Super Resolution x8</th>
                             <th>Ground Truth</th>
@@ -735,7 +735,7 @@
                     <caption class="text-body-secondary text-center fw-bold">HAT-S applies MixLosses Loss</caption>
                     <thead>
                         <tr>
-                            <th>Low Resolution</th>
+                            <th>Low Resolution x4</th>
                             <th>Super Resolution x4</th>
                             <th>Super Resolution x8</th>
                             <th>Ground Truth</th>
@@ -1128,7 +1128,7 @@
                     <caption class="text-body-secondary text-center fw-bold">HAT-S for VN landscape</caption>
                     <thead>
                         <tr>
-                            <th>Low Resolution</th>
+                            <th>Low Resolution x4</th>
                             <th>Super Resolution x4</th>
                             <th>Super Resolution x8</th>
                             <th>Ground Truth</th>
@@ -1140,7 +1140,7 @@
                                 <div class="card" style="height: 200px; width: 250px;">
                                     <div class="tiles">
                                         <div class="tile" data-scale="3"
-                                            data-image="./images/Visualization/BSD100/LR-37073.png"></div>
+                                            data-image="./images/Visualization/VietnamLandscape/LR-0074.png"></div>
                                     </div>
                                 </div>
                             </td>
@@ -1148,7 +1148,7 @@
                                 <div class="card" style="height: 200px; width: 250px;">
                                     <div class="tiles">
                                         <div class="tile" data-scale="3"
-                                            data-image="./images/Visualization/BSD100/37073_HAT-S_SRx4_PerceptualLoss_conv2_2.png">
+                                            data-image="./images/Visualization/VietnamLandscape/HR-0074.png">
                                         </div>
                                     </div>
                                 </div>
@@ -1157,7 +1157,7 @@
                                 <div class="card" style="height: 200px; width: 250px;">
                                     <div class="tiles">
                                         <div class="tile" data-scale="3"
-                                            data-image="./images/Visualization/BSD100/37073_HAT-S_SRx8_PerceptualLoss_conv2_2.png">
+                                            data-image="./images/Visualization/VietnamLandscape/SRx8_0074.png">
                                         </div>
                                     </div>
                                 </div>
@@ -1166,7 +1166,43 @@
                                 <div class="card" style="height: 200px; width: 250px;">
                                     <div class="tiles">
                                         <div class="tile" data-scale="3"
-                                            data-image="./images/Visualization/BSD100/HR-37073.png"></div>
+                                            data-image="./images/Visualization/VietnamLandscape/HR-0074.png"></div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="card" style="height: 200px; width: 250px;">
+                                    <div class="tiles">
+                                        <div class="tile" data-scale="3"
+                                            data-image="./images/Visualization/VietnamLandscape/LR-0070.png"></div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="card" style="height: 200px; width: 250px;">
+                                    <div class="tiles">
+                                        <div class="tile" data-scale="3"
+                                            data-image="./images/Visualization/VietnamLandscape/HR-0070.png">
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="card" style="height: 200px; width: 250px;">
+                                    <div class="tiles">
+                                        <div class="tile" data-scale="3"
+                                            data-image="./images/Visualization/VietnamLandscape/SRx8_0070.png">
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="card" style="height: 200px; width: 250px;">
+                                    <div class="tiles">
+                                        <div class="tile" data-scale="3"
+                                            data-image="./images/Visualization/VietnamLandscape/HR-0070.png"></div>
                                     </div>
                                 </div>
                             </td>
@@ -1177,7 +1213,7 @@
                     <caption class="text-body-secondary text-center fw-bold">HAT-S denoise</caption>
                     <thead>
                         <tr>
-                            <th>Low Resolution</th>
+                            <th>Low Resolution x4</th>
                             <th>Super Resolution x4</th>
                             <th>Super Resolution x8</th>
                             <th>Ground Truth</th>
@@ -1189,7 +1225,7 @@
                                 <div class="card" style="height: 200px; width: 250px;">
                                     <div class="tiles">
                                         <div class="tile" data-scale="3"
-                                            data-image="./images/Visualization/Manga109/LR-Arisa.png"></div>
+                                            data-image="./images/Visualization/HumanFaces/LR-0277.png"></div>
                                     </div>
                                 </div>
                             </td>
@@ -1197,7 +1233,7 @@
                                 <div class="card" style="height: 200px; width: 250px;">
                                     <div class="tiles">
                                         <div class="tile" data-scale="3"
-                                            data-image="./images/Visualization/Manga109/Arisa_HAT-S_SRx4_MixLosses.png">
+                                            data-image="./images/Visualization/HumanFaces/HR-0277.png">
                                         </div>
                                     </div>
                                 </div>
@@ -1206,7 +1242,7 @@
                                 <div class="card" style="height: 200px; width: 250px;">
                                     <div class="tiles">
                                         <div class="tile" data-scale="3"
-                                            data-image="./images/Visualization/Manga109/Arisa_HAT-S_SRx8_MixLosses.png">
+                                            data-image="./images/Visualization/HumanFaces/HR-0277.png">
                                         </div>
                                     </div>
                                 </div>
@@ -1215,7 +1251,43 @@
                                 <div class="card" style="height: 200px; width: 250px;">
                                     <div class="tiles">
                                         <div class="tile" data-scale="3"
-                                            data-image="./images/Visualization/Manga109/HR-Arisa.png"></div>
+                                            data-image="./images/Visualization/HumanFaces/HR-0277.png"></div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="card" style="height: 200px; width: 250px;">
+                                    <div class="tiles">
+                                        <div class="tile" data-scale="3"
+                                            data-image="./images/Visualization/HumanFaces/LR-0256.png"></div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="card" style="height: 200px; width: 250px;">
+                                    <div class="tiles">
+                                        <div class="tile" data-scale="3"
+                                            data-image="./images/Visualization/HumanFaces/HR-0256.png">
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="card" style="height: 200px; width: 250px;">
+                                    <div class="tiles">
+                                        <div class="tile" data-scale="3"
+                                            data-image="./images/Visualization/HumanFaces/HR-0256.png">
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="card" style="height: 200px; width: 250px;">
+                                    <div class="tiles">
+                                        <div class="tile" data-scale="3"
+                                            data-image="./images/Visualization/HumanFaces/HR-0256.png"></div>
                                     </div>
                                 </div>
                             </td>
