--- a/deploy/UI/demo/index.html
+++ b/deploy/UI/demo/index.html
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 themed-grid-col" >
                     <figure class="figure" >
                         <svg class="bd-placeholder-img figure-img img-fluid rounded" width="400" height="300"
                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 400x300"
