--- a/deploy/UI/demo/index.html
+++ b/deploy/UI/demo/index.html
@@ -116,8 +116,13 @@
                                     style="display: none" role="status" id="waiting_spinner">
                                     <span class="visually-hidden">Loading...</span>
                                 </div>
+                                <div class="spinner-border text-warning position-absolute start-100"
+                                    style="display: none" role="status" id="unpacking_spinner">
+                                    <span class="visually-hidden">Loading...</span>
+                                </div>
                             </div>
                             <div class="me-2" id="waitingstatus"></div>
+                            <div class="me-2" id="unpackingstatus"></div>
                             <div class="time me-2" id="processingTime"></div>
                         </div>
                         <div class="col text-end">
